<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="37dp"
            android:textColor="@color/hitam"
            android:text="@string/app_name"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="172dp"
            android:layout_height="172dp"
            android:layout_gravity="center"
            android:src="@drawable/bayu2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/abu2"
            android:text="@string/nama"
            android:textSize="20sp"
            android:layout_marginHorizontal="37dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/abu3"
            android:text="@string/about_desc"
            android:textSize="16sp"
            android:layout_marginHorizontal="37dp"/>

        <Button
            android:id="@+id/btn_kembali"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="37dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/menu_grad_5"
            android:padding="12dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="#fff"
            android:text="@string/kembali"/>

    </LinearLayout>

</ScrollView>