<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="37dp"
        android:textColor="@color/hitam"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_below="@id/txt_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        android:layout_marginHorizontal="37dp"
        android:textColor="@color/abu1"
        android:layout_marginTop="15dp"
        android:text="@string/desc"/>

    <ScrollView
        android:id="@+id/scView"
        android:layout_below="@id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="37dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu1"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_grad_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardPreventCornerOverlap="false"
                app:cardElevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal"
                    android:background="@drawable/menu_grad_1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/m1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/m1"
                        android:textSize="18dp"
                        android:gravity="center|left"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="#fff"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu2"
                android:layout_marginTop="22dp"
                android:background="@drawable/menu_grad_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardPreventCornerOverlap="false"
                app:cardElevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal"
                    android:background="@drawable/menu_grad_2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/m2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/m2"
                        android:textSize="18dp"
                        android:gravity="center|left"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="#fff"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu3"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardPreventCornerOverlap="false"
                app:cardElevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal"
                    android:background="@drawable/menu_grad_3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/m3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/m3"
                        android:textSize="18dp"
                        android:gravity="center|left"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="#fff"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu4"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardPreventCornerOverlap="false"
                app:cardElevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal"
                    android:background="@drawable/menu_grad_4">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/m4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/m4"
                        android:textSize="18dp"
                        android:gravity="center|left"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="#fff"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu5"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                card_view:cardPreventCornerOverlap="false"
                app:cardElevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal"
                    android:background="@drawable/menu_grad_5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/m5"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="#fff"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>